force-app/main/default/objects/Contact/fields/Activator_DealerId__c.field-meta.xml
<CustomField>
    <fullName>Activator_DealerId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Dealer record in the Activator System</inlineHelpText>
    <label>Activator Dealer Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>