force-app/main/default/objects/Contact/fields/Activator_PersonId__c.field-meta.xml
<CustomField>
    <fullName>Activator_PersonId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id for the Person record in the Activator System</inlineHelpText>
    <label>Activator Person Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>