force-app/main/default/objects/Contact/fields/CustomerSource__c.field-meta.xml
<CustomField>
    <fullName>CustomerSource__c</fullName>
    <description>How the person was initially created</description>
    <inlineHelpText>How the person was initially created</inlineHelpText>
    <label>Customer Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fushia</fullName>
            </value>
            <value>
                <fullName>DMS Sales</fullName>
            </value>
            <value>
                <fullName>DMS Service</fullName>
            </value>
            <value>
                <fullName>Boost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>