force-app/main/default/objects/Contact/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <inlineHelpText>Month/Day, does not include year</inlineHelpText>
    <label>Date Of Birth</label>
    <length>5</length>
    <type>Text</type>
</CustomField>