force-app/main/default/objects/Contact/fields/FirstName_Resolved__c.field-meta.xml
<CustomField>
    <fullName>FirstName_Resolved__c</fullName>
    <description>First Name (Merge Field)</description>
    <inlineHelpText>The trimmed, title-cased First Name</inlineHelpText>
    <label>First Name (Merge Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>