force-app/main/default/objects/Contact/fields/FunnelSegment__c.field-meta.xml
<CustomField>
    <fullName>FunnelSegment__c</fullName>
    <description>&apos;Type&apos; of person</description>
    <inlineHelpText>&apos;Type&apos; of person</inlineHelpText>
    <label>Funnel Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Lost Soul</fullName>
            </value>
            <value>
                <fullName>Win Back</fullName>
            </value>
            <value>
                <fullName>Subsequent Owner</fullName>
            </value>
            <value>
                <fullName>Service Conquest</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>