force-app/main/default/objects/Contact/fields/FunnelStage__c.field-meta.xml
<CustomField>
    <fullName>FunnelStage__c</fullName>
    <description>Where they are in the funnel</description>
    <inlineHelpText>Where they are in the funnel</inlineHelpText>
    <label>Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>