force-app/main/default/objects/Contact/fields/HasOpenRO__c.field-meta.xml
<CustomField>
    <fullName>HasOpenRO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this person has an upcoming service appointment</description>
    <inlineHelpText>If this person has an upcoming service appointment</inlineHelpText>
    <label>Has Open RO</label>
    <type>Checkbox</type>
</CustomField>