force-app/main/default/objects/Contact/fields/IsActiveDashboardLead__c.field-meta.xml
<CustomField>
    <fullName>IsActiveDashboardLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this person an active &apos;hand-raiser&apos; and assigned to a user as a Lead</description>
    <inlineHelpText>Is this person an active &apos;hand-raiser&apos; and assigned to a user as a Lead</inlineHelpText>
    <label>Is Active Dashboard Lead</label>
    <type>Checkbox</type>
</CustomField>