force-app/main/default/objects/Contact/fields/LastName_Resolved__c.field-meta.xml
<CustomField>
    <fullName>LastName_Resolved__c</fullName>
    <label>Last Name (Merge Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>